@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/03/31
+	* Modified a bit the skill packets of Sharp-Shooting and Brandish Spear in
+	  hopes of fixing it. [Skotlex]
 	* Should fix a bug in GM stealth mode (@hide). [Lance]
 
 2006/03/30
