@@ -27,9 +27,10 @@
 
 =========================
 
+03/31
+	* Adjusted the range of Wall of Fog to 9 and Spider Web to 7 [Skotlex]
 03/30
 	* Fixed a lot of Jnames [Poki#3]
-
 03/29
 	* Updated FULL BUSTER aftercast delays, thanks to Haplo [Lupus]
 	- Fixed Rose Nile bonus
